After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 515109 - bacon_video_widget_has_*_track not implemented
bacon_video_widget_has_*_track not implemented
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on: 589064
Blocks:
 
 
Reported: 2008-02-08 00:31 UTC by Bastien Nocera
Modified: 2012-07-13 20:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2008-02-08 00:31:44 UTC
bacon_video_widget_has_next_track() and bacon_video_widget_has_previous_track() aren't implemented, but we should be able to implement them by checking the number of chapters in the current title, and seeing whether we're on the first/last ones.
Comment 1 Bastien Nocera 2008-02-08 00:33:53 UTC
We'd probably need to cache the number of chapters when opening the track. bacon_video_widget_get_mrls() has an example of getting the number of titles, just replace with the number of chapters.
Comment 2 Bastien Nocera 2009-07-19 22:55:07 UTC
Jan mentioned to me that resindvd already does the right thing for "next" (if we press "next" during the last chapter, it'll go back to the menu). But that's broken for previous chapter.
Comment 3 Bastien Nocera 2012-07-13 20:13:16 UTC
commit 7841b1c511af57aa376f253c07f0da82e853b101
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Jul 13 20:45:44 2012 +0100

    backend: Implement has_{next,previous}_track
    
    https://bugzilla.gnome.org/show_bug.cgi?id=515109