backend: Implement has_{next,previous}_track

https://bugzilla.gnome.org/show_bug.cgi?id=515109